try fix on background jump

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -37,7 +37,7 @@ body {
   background-position: top;
   background-attachment: fixed;
   background-size: cover;
-  height: 100vh;
+  // height: 100vh;
 }
 
 
